17234
it works fine with Seqs and Sets, but:

{noformat}

scala> Map(1 -> 2).to[collection.mutable.Map]
<console>:11: error: scala.collection.mutable.Map takes two type parameters, expected: one
              Map(1 -> 2).to[collection.mutable.Map]
                                                ^
<console>:11: error: kinds of the type arguments (<error>) do not conform to the expected kinds of the type parameters (type Col).
<error>'s type parameters do not match type Col's expected parameters:
<none> has no type parameters, but type Col has one
              Map(1 -> 2).to[collection.mutable.Map]
                            ^
{noformat}

other Map subtypes such as ListMap, same.
